@@ -4,10 +4,14 @@ CDO NEWS
 Version 1.7.0 (28 October 2015):
 
    New operators:
+     * vertstd1: Vertical standard deviation [Divisor is (n-1)]
+     * vertvar1: Vertical variance [Divisor is (n-1)]
      * seasvar1: Seasonal variance [Divisor is (n-1)]
      * seasstd1: Seasonal standard deviation [Divisor is (n-1)]
      * yseasvar1: Multi-year seasonally variance [Divisor is (n-1)]
      * yseasstd1: Multi-year seasonally standard deviation [Divisor is (n-1)]
+   Changed operators:
+     * vertvar, vertstd: changed to weighted var/std if layer bounds are available
    Fixed bugs:
      * env. CDO_TIMESTAT_DATE does not work [Bug #5758]
      * splityear*: support for constant fields is missing [Bug #5759]
