@@ -3,6 +3,10 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
+2015-06-01  Uwe Schulzweida
+
+	* vertvar, vertstd: changed to weighted var/std if layer bounds are available
+
 2015-05-29  Uwe Schulzweida
 
 	* yseaspctl: check of verification date failed [Bug #5810]
@@ -14,7 +18,7 @@
 2015-05-26  Uwe Schulzweida
 
 	* New operator: vertstd1  - Vertical standard deviation [Divisor is (n-1)]
-	* New operator: vertvar1  - Vartical variance [Divisor is (n-1)]
+	* New operator: vertvar1  - Vertical variance [Divisor is (n-1)]
 	* New operator: gridboxstd1 - Gridbox standard deviation [Divisor is (n-1)]
 	* New operator: gridboxvar1 - Gridbox variance [Divisor is (n-1)]
 	* New operator: merstd1  - Meridional standard deviation [Divisor is (n-1)]
